--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.2.2",
     "element-ui": "^2.15.6",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.3",
     "qs": "^6.10.2",
     "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
